# Task_2

./: .travis.yml  CMakeLists.txt  README.md
ci/: install-linux.sh
dynamic_lib/include/: data.h  parallel_count.h
dynamic_lib/src/: parallel_count.c
include/: generate.h
src/: generate.c  main.c
static_lib/include/: count.h
static_lib/src/: count.c
tests/: test_count.cpp
